6572160: 3/3 Instrumentation.getObjectSize triggers JVM crash in JPLISAssert in shutdown

Tolerate JVMTI_ERROR_WRONG_PHASE return codes so that JLI methods can be called to the end of VM's life.

Reviewed-by: ohair, sspitsyn